DT-1911 Navigation overlay fix on iOS mobile #2

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -75,10 +75,8 @@ html, body {
 	top: 0;
 	bottom: 0;
 	left: 0;
-	max-height: 100vh;
-	height: 100vh;
+	// max-height: 100vh;
 	opacity: 1;
-	width: -webkit-calc(100% - 0px);
 	@media @mobile {
 		padding-bottom: 45px;
 	}
